<resources>
    <string name="app_name">Password Manager</string>
    <string name="password_manager">Password Manager</string>
    <string name="add_url">Add Url</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="add_login">Add Username/Email</string>
    <string name="login">Login</string>
    <string name="add_name">Add Name...</string>
    <string name="website">Website</string>
    <string name="name">Name</string>
    <string name="category">Category:</string>
    <string name="passwords">Passwords</string>
    <string name="add">add</string>
    <string name="show">show</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign out</string>
    <string name="delete">Delete</string>
    <string name="generate">Generate</string>
    <string name="settings">settings</string>
    <string name="theme_key">dark</string>
    <string name="theme_choice">Dark Mode</string>

    <string-array name="password_category">
        <item>No category</item>
        <item>Health</item>
        <item>Finance</item>
        <item>Shopping</item>
        <item>Entertainment</item>
        <item>Business</item>
        <item>News</item>
        <item>Real Estate</item>
        <item>Social Media</item>
        <item>Career</item>
        <item>Other</item>
        <item>Travel</item>
        <item>Tech</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>